Practica13(XOR)/src/sintactico/y.output
   0  $accept : programa $end

   1  programa : definiciones VOID MAIN '(' ')' '{' declaraciones sentencias '}'

   2  definiciones : definiciones definicion
   3               |

   4  definicion : tipoSimple ID '(' parametros ')' '{' declaraciones cuerpoDefinicion '}'
   5             | VOID ID '(' parametros ')' '{' declaraciones cuerpoDefinicion '}'
   6             | declaracionVariable ';'

   7  declaraciones : declaraciones declaracionVariable ';'
   8                |

   9  parametros : parametros ',' definicionVariable
  10             | definicionVariable
  11             |

  12  definicionVariable : tipoSimple ID

  13  cuerpoDefinicion : sentencias
  14                   |

  15  sentencias : sentencias sentencia
  16             | sentencia

  17  sentencia : expresion '=' expresion ';'
  18            | WHILE '(' expresion ')' cuerpoCondicional
  19            | IF '(' expresion ')' cuerpoCondicional
  20            | IF '(' expresion ')' cuerpoCondicional ELSE cuerpoCondicional
  21            | WRITE expresiones ';'
  22            | READ expresiones ';'
  23            | invocacion ';'
  24            | RETURN expresion ';'

  25  cuerpoCondicional : '{' sentencias '}'
  26                    | sentencia

  27  declaracionVariable : tipoSimple identificador
  28                      | tipoSimple indices identificador
  29                      | STRUCT '{' campos '}' identificador
  30                      | STRUCT '{' campos '}' indices identificador

  31  campos : campos declaracionVariable ';'
  32         | declaracionVariable ';'

  33  expresiones : expresiones ',' expresion
  34              | expresion

  35  expresion : ID
  36            | CTE_ENTERA
  37            | CTE_REAL
  38            | CTE_CARACTER
  39            | expresion '+' expresion
  40            | expresion '*' expresion
  41            | expresion '/' expresion
  42            | expresion '-' expresion
  43            | expresion '%' expresion
  44            | expresion '>' expresion
  45            | expresion '<' expresion
  46            | expresion MAYORIGUALQUE expresion
  47            | expresion MENORIGUALQUE expresion
  48            | expresion DISTINTO expresion
  49            | expresion IGUALDAD expresion
  50            | expresion Y expresion
  51            | expresion O expresion
  52            | expresion X expresion
  53            | '!' expresion
  54            | '-' expresion
  55            | expresion '.' ID
  56            | '(' expresion ')'
  57            | '(' tipoSimple ')' expresion
  58            | invocacion
  59            | expresion '[' expresion ']'

  60  invocacion : ID '(' argumentosLlamada ')'

  61  argumentosLlamada : expresiones
  62                    |

  63  indices : '[' CTE_ENTERA ']' indices
  64          | '[' CTE_ENTERA ']'

  65  identificador : identificador ',' ID
  66                | ID

  67  tipoSimple : INT
  68             | DOUBLE
  69             | CHAR

state 0
	$accept : . programa $end  (0)
	definiciones : .  (3)

	.  reduce 3

	programa  goto 1
	definiciones  goto 2


state 1
	$accept : programa . $end  (0)

	$end  accept


state 2
	programa : definiciones . VOID MAIN '(' ')' '{' declaraciones sentencias '}'  (1)
	definiciones : definiciones . definicion  (2)

	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	STRUCT  shift 6
	VOID  shift 7
	.  error

	definicion  goto 8
	tipoSimple  goto 9
	declaracionVariable  goto 10


state 3
	tipoSimple : INT .  (67)

	.  reduce 67


state 4
	tipoSimple : DOUBLE .  (68)

	.  reduce 68


state 5
	tipoSimple : CHAR .  (69)

	.  reduce 69


state 6
	declaracionVariable : STRUCT . '{' campos '}' identificador  (29)
	declaracionVariable : STRUCT . '{' campos '}' indices identificador  (30)

	'{'  shift 11
	.  error


state 7
	programa : definiciones VOID . MAIN '(' ')' '{' declaraciones sentencias '}'  (1)
	definicion : VOID . ID '(' parametros ')' '{' declaraciones cuerpoDefinicion '}'  (5)

	MAIN  shift 12
	ID  shift 13
	.  error


state 8
	definiciones : definiciones definicion .  (2)

	.  reduce 2


state 9
	definicion : tipoSimple . ID '(' parametros ')' '{' declaraciones cuerpoDefinicion '}'  (4)
	declaracionVariable : tipoSimple . identificador  (27)
	declaracionVariable : tipoSimple . indices identificador  (28)

	ID  shift 14
	'['  shift 15
	.  error

	identificador  goto 16
	indices  goto 17


state 10
	definicion : declaracionVariable . ';'  (6)

	';'  shift 18
	.  error


state 11
	declaracionVariable : STRUCT '{' . campos '}' identificador  (29)
	declaracionVariable : STRUCT '{' . campos '}' indices identificador  (30)

	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	STRUCT  shift 6
	.  error

	tipoSimple  goto 19
	declaracionVariable  goto 20
	campos  goto 21


state 12
	programa : definiciones VOID MAIN . '(' ')' '{' declaraciones sentencias '}'  (1)

	'('  shift 22
	.  error


state 13
	definicion : VOID ID . '(' parametros ')' '{' declaraciones cuerpoDefinicion '}'  (5)

	'('  shift 23
	.  error


state 14
	definicion : tipoSimple ID . '(' parametros ')' '{' declaraciones cuerpoDefinicion '}'  (4)
	identificador : ID .  (66)

	'('  shift 24
	';'  reduce 66
	','  reduce 66


state 15
	indices : '[' . CTE_ENTERA ']' indices  (63)
	indices : '[' . CTE_ENTERA ']'  (64)

	CTE_ENTERA  shift 25
	.  error


state 16
	declaracionVariable : tipoSimple identificador .  (27)
	identificador : identificador . ',' ID  (65)

	','  shift 26
	';'  reduce 27


state 17
	declaracionVariable : tipoSimple indices . identificador  (28)

	ID  shift 27
	.  error

	identificador  goto 28


state 18
	definicion : declaracionVariable ';' .  (6)

	.  reduce 6


state 19
	declaracionVariable : tipoSimple . identificador  (27)
	declaracionVariable : tipoSimple . indices identificador  (28)

	ID  shift 27
	'['  shift 15
	.  error

	identificador  goto 16
	indices  goto 17


state 20
	campos : declaracionVariable . ';'  (32)

	';'  shift 29
	.  error


state 21
	declaracionVariable : STRUCT '{' campos . '}' identificador  (29)
	declaracionVariable : STRUCT '{' campos . '}' indices identificador  (30)
	campos : campos . declaracionVariable ';'  (31)

	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	STRUCT  shift 6
	'}'  shift 30
	.  error

	tipoSimple  goto 19
	declaracionVariable  goto 31


state 22
	programa : definiciones VOID MAIN '(' . ')' '{' declaraciones sentencias '}'  (1)

	')'  shift 32
	.  error


state 23
	definicion : VOID ID '(' . parametros ')' '{' declaraciones cuerpoDefinicion '}'  (5)
	parametros : .  (11)

	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	')'  reduce 11
	','  reduce 11

	tipoSimple  goto 33
	parametros  goto 34
	definicionVariable  goto 35


state 24
	definicion : tipoSimple ID '(' . parametros ')' '{' declaraciones cuerpoDefinicion '}'  (4)
	parametros : .  (11)

	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	')'  reduce 11
	','  reduce 11

	tipoSimple  goto 33
	parametros  goto 36
	definicionVariable  goto 35


state 25
	indices : '[' CTE_ENTERA . ']' indices  (63)
	indices : '[' CTE_ENTERA . ']'  (64)

	']'  shift 37
	.  error


state 26
	identificador : identificador ',' . ID  (65)

	ID  shift 38
	.  error


state 27
	identificador : ID .  (66)

	.  reduce 66


state 28
	declaracionVariable : tipoSimple indices identificador .  (28)
	identificador : identificador . ',' ID  (65)

	','  shift 26
	';'  reduce 28


state 29
	campos : declaracionVariable ';' .  (32)

	.  reduce 32


state 30
	declaracionVariable : STRUCT '{' campos '}' . identificador  (29)
	declaracionVariable : STRUCT '{' campos '}' . indices identificador  (30)

	ID  shift 27
	'['  shift 15
	.  error

	identificador  goto 39
	indices  goto 40


state 31
	campos : campos declaracionVariable . ';'  (31)

	';'  shift 41
	.  error


state 32
	programa : definiciones VOID MAIN '(' ')' . '{' declaraciones sentencias '}'  (1)

	'{'  shift 42
	.  error


state 33
	definicionVariable : tipoSimple . ID  (12)

	ID  shift 43
	.  error


state 34
	definicion : VOID ID '(' parametros . ')' '{' declaraciones cuerpoDefinicion '}'  (5)
	parametros : parametros . ',' definicionVariable  (9)

	')'  shift 44
	','  shift 45
	.  error


state 35
	parametros : definicionVariable .  (10)

	.  reduce 10


state 36
	definicion : tipoSimple ID '(' parametros . ')' '{' declaraciones cuerpoDefinicion '}'  (4)
	parametros : parametros . ',' definicionVariable  (9)

	')'  shift 46
	','  shift 45
	.  error


state 37
	indices : '[' CTE_ENTERA ']' . indices  (63)
	indices : '[' CTE_ENTERA ']' .  (64)

	'['  shift 15
	ID  reduce 64

	indices  goto 47


state 38
	identificador : identificador ',' ID .  (65)

	.  reduce 65


state 39
	declaracionVariable : STRUCT '{' campos '}' identificador .  (29)
	identificador : identificador . ',' ID  (65)

	','  shift 26
	';'  reduce 29


state 40
	declaracionVariable : STRUCT '{' campos '}' indices . identificador  (30)

	ID  shift 27
	.  error

	identificador  goto 48


state 41
	campos : campos declaracionVariable ';' .  (31)

	.  reduce 31


state 42
	programa : definiciones VOID MAIN '(' ')' '{' . declaraciones sentencias '}'  (1)
	declaraciones : .  (8)

	.  reduce 8

	declaraciones  goto 49


state 43
	definicionVariable : tipoSimple ID .  (12)

	.  reduce 12


state 44
	definicion : VOID ID '(' parametros ')' . '{' declaraciones cuerpoDefinicion '}'  (5)

	'{'  shift 50
	.  error


state 45
	parametros : parametros ',' . definicionVariable  (9)

	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	.  error

	tipoSimple  goto 33
	definicionVariable  goto 51


state 46
	definicion : tipoSimple ID '(' parametros ')' . '{' declaraciones cuerpoDefinicion '}'  (4)

	'{'  shift 52
	.  error


state 47
	indices : '[' CTE_ENTERA ']' indices .  (63)

	.  reduce 63


state 48
	declaracionVariable : STRUCT '{' campos '}' indices identificador .  (30)
	identificador : identificador . ',' ID  (65)

	','  shift 26
	';'  reduce 30


state 49
	programa : definiciones VOID MAIN '(' ')' '{' declaraciones . sentencias '}'  (1)
	declaraciones : declaraciones . declaracionVariable ';'  (7)

	CTE_ENTERA  shift 53
	CTE_REAL  shift 54
	CTE_CARACTER  shift 55
	READ  shift 56
	WRITE  shift 57
	WHILE  shift 58
	IF  shift 59
	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	STRUCT  shift 6
	RETURN  shift 60
	ID  shift 61
	'-'  shift 62
	'('  shift 63
	'!'  shift 64
	.  error

	sentencias  goto 65
	tipoSimple  goto 19
	declaracionVariable  goto 66
	sentencia  goto 67
	expresion  goto 68
	invocacion  goto 69


state 50
	definicion : VOID ID '(' parametros ')' '{' . declaraciones cuerpoDefinicion '}'  (5)
	declaraciones : .  (8)

	.  reduce 8

	declaraciones  goto 70


state 51
	parametros : parametros ',' definicionVariable .  (9)

	.  reduce 9


state 52
	definicion : tipoSimple ID '(' parametros ')' '{' . declaraciones cuerpoDefinicion '}'  (4)
	declaraciones : .  (8)

	.  reduce 8

	declaraciones  goto 71


state 53
	expresion : CTE_ENTERA .  (36)

	.  reduce 36


state 54
	expresion : CTE_REAL .  (37)

	.  reduce 37


state 55
	expresion : CTE_CARACTER .  (38)

	.  reduce 38


state 56
	sentencia : READ . expresiones ';'  (22)

	CTE_ENTERA  shift 53
	CTE_REAL  shift 54
	CTE_CARACTER  shift 55
	ID  shift 61
	'-'  shift 62
	'('  shift 63
	'!'  shift 64
	.  error

	expresion  goto 72
	expresiones  goto 73
	invocacion  goto 74


state 57
	sentencia : WRITE . expresiones ';'  (21)

	CTE_ENTERA  shift 53
	CTE_REAL  shift 54
	CTE_CARACTER  shift 55
	ID  shift 61
	'-'  shift 62
	'('  shift 63
	'!'  shift 64
	.  error

	expresion  goto 72
	expresiones  goto 75
	invocacion  goto 74


state 58
	sentencia : WHILE . '(' expresion ')' cuerpoCondicional  (18)

	'('  shift 76
	.  error


state 59
	sentencia : IF . '(' expresion ')' cuerpoCondicional  (19)
	sentencia : IF . '(' expresion ')' cuerpoCondicional ELSE cuerpoCondicional  (20)

	'('  shift 77
	.  error


state 60
	sentencia : RETURN . expresion ';'  (24)

	CTE_ENTERA  shift 53
	CTE_REAL  shift 54
	CTE_CARACTER  shift 55
	ID  shift 61
	'-'  shift 62
	'('  shift 63
	'!'  shift 64
	.  error

	expresion  goto 78
	invocacion  goto 74


state 61
	expresion : ID .  (35)
	invocacion : ID . '(' argumentosLlamada ')'  (60)

	'('  shift 79
	Y  reduce 35
	O  reduce 35
	MAYORIGUALQUE  reduce 35
	MENORIGUALQUE  reduce 35
	DISTINTO  reduce 35
	IGUALDAD  reduce 35
	'='  reduce 35
	X  reduce 35
	'>'  reduce 35
	'<'  reduce 35
	'+'  reduce 35
	'-'  reduce 35
	'*'  reduce 35
	'/'  reduce 35
	'%'  reduce 35
	'['  reduce 35
	']'  reduce 35
	'.'  reduce 35
	')'  reduce 35
	';'  reduce 35
	','  reduce 35


state 62
	expresion : '-' . expresion  (54)

	CTE_ENTERA  shift 53
	CTE_REAL  shift 54
	CTE_CARACTER  shift 55
	ID  shift 61
	'-'  shift 62
	'('  shift 63
	'!'  shift 64
	.  error

	expresion  goto 80
	invocacion  goto 74


state 63
	expresion : '(' . expresion ')'  (56)
	expresion : '(' . tipoSimple ')' expresion  (57)

	CTE_ENTERA  shift 53
	CTE_REAL  shift 54
	CTE_CARACTER  shift 55
	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	ID  shift 61
	'-'  shift 62
	'('  shift 63
	'!'  shift 64
	.  error

	tipoSimple  goto 81
	expresion  goto 82
	invocacion  goto 74


state 64
	expresion : '!' . expresion  (53)

	CTE_ENTERA  shift 53
	CTE_REAL  shift 54
	CTE_CARACTER  shift 55
	ID  shift 61
	'-'  shift 62
	'('  shift 63
	'!'  shift 64
	.  error

	expresion  goto 83
	invocacion  goto 74


state 65
	programa : definiciones VOID MAIN '(' ')' '{' declaraciones sentencias . '}'  (1)
	sentencias : sentencias . sentencia  (15)

	CTE_ENTERA  shift 53
	CTE_REAL  shift 54
	CTE_CARACTER  shift 55
	READ  shift 56
	WRITE  shift 57
	WHILE  shift 58
	IF  shift 59
	RETURN  shift 60
	ID  shift 61
	'-'  shift 62
	'('  shift 63
	'}'  shift 84
	'!'  shift 64
	.  error

	sentencia  goto 85
	expresion  goto 68
	invocacion  goto 69


state 66
	declaraciones : declaraciones declaracionVariable . ';'  (7)

	';'  shift 86
	.  error


state 67
	sentencias : sentencia .  (16)

	.  reduce 16


state 68
	sentencia : expresion . '=' expresion ';'  (17)
	expresion : expresion . '+' expresion  (39)
	expresion : expresion . '*' expresion  (40)
	expresion : expresion . '/' expresion  (41)
	expresion : expresion . '-' expresion  (42)
	expresion : expresion . '%' expresion  (43)
	expresion : expresion . '>' expresion  (44)
	expresion : expresion . '<' expresion  (45)
	expresion : expresion . MAYORIGUALQUE expresion  (46)
	expresion : expresion . MENORIGUALQUE expresion  (47)
	expresion : expresion . DISTINTO expresion  (48)
	expresion : expresion . IGUALDAD expresion  (49)
	expresion : expresion . Y expresion  (50)
	expresion : expresion . O expresion  (51)
	expresion : expresion . X expresion  (52)
	expresion : expresion . '.' ID  (55)
	expresion : expresion . '[' expresion ']'  (59)

	Y  shift 87
	O  shift 88
	MAYORIGUALQUE  shift 89
	MENORIGUALQUE  shift 90
	DISTINTO  shift 91
	IGUALDAD  shift 92
	'='  shift 93
	X  shift 94
	'>'  shift 95
	'<'  shift 96
	'+'  shift 97
	'-'  shift 98
	'*'  shift 99
	'/'  shift 100
	'%'  shift 101
	'['  shift 102
	'.'  shift 103
	.  error


state 69
	sentencia : invocacion . ';'  (23)
	expresion : invocacion .  (58)

	';'  shift 104
	Y  reduce 58
	O  reduce 58
	MAYORIGUALQUE  reduce 58
	MENORIGUALQUE  reduce 58
	DISTINTO  reduce 58
	IGUALDAD  reduce 58
	'='  reduce 58
	X  reduce 58
	'>'  reduce 58
	'<'  reduce 58
	'+'  reduce 58
	'-'  reduce 58
	'*'  reduce 58
	'/'  reduce 58
	'%'  reduce 58
	'['  reduce 58
	'.'  reduce 58


state 70
	definicion : VOID ID '(' parametros ')' '{' declaraciones . cuerpoDefinicion '}'  (5)
	declaraciones : declaraciones . declaracionVariable ';'  (7)
	cuerpoDefinicion : .  (14)

	CTE_ENTERA  shift 53
	CTE_REAL  shift 54
	CTE_CARACTER  shift 55
	READ  shift 56
	WRITE  shift 57
	WHILE  shift 58
	IF  shift 59
	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	STRUCT  shift 6
	RETURN  shift 60
	ID  shift 61
	'-'  shift 62
	'('  shift 63
	'!'  shift 64
	'}'  reduce 14

	sentencias  goto 105
	tipoSimple  goto 19
	cuerpoDefinicion  goto 106
	declaracionVariable  goto 66
	sentencia  goto 67
	expresion  goto 68
	invocacion  goto 69


state 71
	definicion : tipoSimple ID '(' parametros ')' '{' declaraciones . cuerpoDefinicion '}'  (4)
	declaraciones : declaraciones . declaracionVariable ';'  (7)
	cuerpoDefinicion : .  (14)

	CTE_ENTERA  shift 53
	CTE_REAL  shift 54
	CTE_CARACTER  shift 55
	READ  shift 56
	WRITE  shift 57
	WHILE  shift 58
	IF  shift 59
	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	STRUCT  shift 6
	RETURN  shift 60
	ID  shift 61
	'-'  shift 62
	'('  shift 63
	'!'  shift 64
	'}'  reduce 14

	sentencias  goto 105
	tipoSimple  goto 19
	cuerpoDefinicion  goto 107
	declaracionVariable  goto 66
	sentencia  goto 67
	expresion  goto 68
	invocacion  goto 69


state 72
	expresiones : expresion .  (34)
	expresion : expresion . '+' expresion  (39)
	expresion : expresion . '*' expresion  (40)
	expresion : expresion . '/' expresion  (41)
	expresion : expresion . '-' expresion  (42)
	expresion : expresion . '%' expresion  (43)
	expresion : expresion . '>' expresion  (44)
	expresion : expresion . '<' expresion  (45)
	expresion : expresion . MAYORIGUALQUE expresion  (46)
	expresion : expresion . MENORIGUALQUE expresion  (47)
	expresion : expresion . DISTINTO expresion  (48)
	expresion : expresion . IGUALDAD expresion  (49)
	expresion : expresion . Y expresion  (50)
	expresion : expresion . O expresion  (51)
	expresion : expresion . X expresion  (52)
	expresion : expresion . '.' ID  (55)
	expresion : expresion . '[' expresion ']'  (59)

	Y  shift 87
	O  shift 88
	MAYORIGUALQUE  shift 89
	MENORIGUALQUE  shift 90
	DISTINTO  shift 91
	IGUALDAD  shift 92
	X  shift 94
	'>'  shift 95
	'<'  shift 96
	'+'  shift 97
	'-'  shift 98
	'*'  shift 99
	'/'  shift 100
	'%'  shift 101
	'['  shift 102
	'.'  shift 103
	')'  reduce 34
	';'  reduce 34
	','  reduce 34


state 73
	sentencia : READ expresiones . ';'  (22)
	expresiones : expresiones . ',' expresion  (33)

	';'  shift 108
	','  shift 109
	.  error


state 74
	expresion : invocacion .  (58)

	.  reduce 58


state 75
	sentencia : WRITE expresiones . ';'  (21)
	expresiones : expresiones . ',' expresion  (33)

	';'  shift 110
	','  shift 109
	.  error


state 76
	sentencia : WHILE '(' . expresion ')' cuerpoCondicional  (18)

	CTE_ENTERA  shift 53
	CTE_REAL  shift 54
	CTE_CARACTER  shift 55
	ID  shift 61
	'-'  shift 62
	'('  shift 63
	'!'  shift 64
	.  error

	expresion  goto 111
	invocacion  goto 74


state 77
	sentencia : IF '(' . expresion ')' cuerpoCondicional  (19)
	sentencia : IF '(' . expresion ')' cuerpoCondicional ELSE cuerpoCondicional  (20)

	CTE_ENTERA  shift 53
	CTE_REAL  shift 54
	CTE_CARACTER  shift 55
	ID  shift 61
	'-'  shift 62
	'('  shift 63
	'!'  shift 64
	.  error

	expresion  goto 112
	invocacion  goto 74


state 78
	sentencia : RETURN expresion . ';'  (24)
	expresion : expresion . '+' expresion  (39)
	expresion : expresion . '*' expresion  (40)
	expresion : expresion . '/' expresion  (41)
	expresion : expresion . '-' expresion  (42)
	expresion : expresion . '%' expresion  (43)
	expresion : expresion . '>' expresion  (44)
	expresion : expresion . '<' expresion  (45)
	expresion : expresion . MAYORIGUALQUE expresion  (46)
	expresion : expresion . MENORIGUALQUE expresion  (47)
	expresion : expresion . DISTINTO expresion  (48)
	expresion : expresion . IGUALDAD expresion  (49)
	expresion : expresion . Y expresion  (50)
	expresion : expresion . O expresion  (51)
	expresion : expresion . X expresion  (52)
	expresion : expresion . '.' ID  (55)
	expresion : expresion . '[' expresion ']'  (59)

	Y  shift 87
	O  shift 88
	MAYORIGUALQUE  shift 89
	MENORIGUALQUE  shift 90
	DISTINTO  shift 91
	IGUALDAD  shift 92
	X  shift 94
	'>'  shift 95
	'<'  shift 96
	'+'  shift 97
	'-'  shift 98
	'*'  shift 99
	'/'  shift 100
	'%'  shift 101
	'['  shift 102
	'.'  shift 103
	';'  shift 113
	.  error


state 79
	invocacion : ID '(' . argumentosLlamada ')'  (60)
	argumentosLlamada : .  (62)

	CTE_ENTERA  shift 53
	CTE_REAL  shift 54
	CTE_CARACTER  shift 55
	ID  shift 61
	'-'  shift 62
	'('  shift 63
	'!'  shift 64
	')'  reduce 62

	expresion  goto 72
	expresiones  goto 114
	invocacion  goto 74
	argumentosLlamada  goto 115


state 80
	expresion : expresion . '+' expresion  (39)
	expresion : expresion . '*' expresion  (40)
	expresion : expresion . '/' expresion  (41)
	expresion : expresion . '-' expresion  (42)
	expresion : expresion . '%' expresion  (43)
	expresion : expresion . '>' expresion  (44)
	expresion : expresion . '<' expresion  (45)
	expresion : expresion . MAYORIGUALQUE expresion  (46)
	expresion : expresion . MENORIGUALQUE expresion  (47)
	expresion : expresion . DISTINTO expresion  (48)
	expresion : expresion . IGUALDAD expresion  (49)
	expresion : expresion . Y expresion  (50)
	expresion : expresion . O expresion  (51)
	expresion : expresion . X expresion  (52)
	expresion : '-' expresion .  (54)
	expresion : expresion . '.' ID  (55)
	expresion : expresion . '[' expresion ']'  (59)

	'['  shift 102
	'.'  shift 103
	Y  reduce 54
	O  reduce 54
	MAYORIGUALQUE  reduce 54
	MENORIGUALQUE  reduce 54
	DISTINTO  reduce 54
	IGUALDAD  reduce 54
	'='  reduce 54
	X  reduce 54
	'>'  reduce 54
	'<'  reduce 54
	'+'  reduce 54
	'-'  reduce 54
	'*'  reduce 54
	'/'  reduce 54
	'%'  reduce 54
	']'  reduce 54
	')'  reduce 54
	';'  reduce 54
	','  reduce 54


state 81
	expresion : '(' tipoSimple . ')' expresion  (57)

	')'  shift 116
	.  error


state 82
	expresion : expresion . '+' expresion  (39)
	expresion : expresion . '*' expresion  (40)
	expresion : expresion . '/' expresion  (41)
	expresion : expresion . '-' expresion  (42)
	expresion : expresion . '%' expresion  (43)
	expresion : expresion . '>' expresion  (44)
	expresion : expresion . '<' expresion  (45)
	expresion : expresion . MAYORIGUALQUE expresion  (46)
	expresion : expresion . MENORIGUALQUE expresion  (47)
	expresion : expresion . DISTINTO expresion  (48)
	expresion : expresion . IGUALDAD expresion  (49)
	expresion : expresion . Y expresion  (50)
	expresion : expresion . O expresion  (51)
	expresion : expresion . X expresion  (52)
	expresion : expresion . '.' ID  (55)
	expresion : '(' expresion . ')'  (56)
	expresion : expresion . '[' expresion ']'  (59)

	Y  shift 87
	O  shift 88
	MAYORIGUALQUE  shift 89
	MENORIGUALQUE  shift 90
	DISTINTO  shift 91
	IGUALDAD  shift 92
	X  shift 94
	'>'  shift 95
	'<'  shift 96
	'+'  shift 97
	'-'  shift 98
	'*'  shift 99
	'/'  shift 100
	'%'  shift 101
	'['  shift 102
	'.'  shift 103
	')'  shift 117
	.  error


state 83
	expresion : expresion . '+' expresion  (39)
	expresion : expresion . '*' expresion  (40)
	expresion : expresion . '/' expresion  (41)
	expresion : expresion . '-' expresion  (42)
	expresion : expresion . '%' expresion  (43)
	expresion : expresion . '>' expresion  (44)
	expresion : expresion . '<' expresion  (45)
	expresion : expresion . MAYORIGUALQUE expresion  (46)
	expresion : expresion . MENORIGUALQUE expresion  (47)
	expresion : expresion . DISTINTO expresion  (48)
	expresion : expresion . IGUALDAD expresion  (49)
	expresion : expresion . Y expresion  (50)
	expresion : expresion . O expresion  (51)
	expresion : expresion . X expresion  (52)
	expresion : '!' expresion .  (53)
	expresion : expresion . '.' ID  (55)
	expresion : expresion . '[' expresion ']'  (59)

	'['  shift 102
	'.'  shift 103
	Y  reduce 53
	O  reduce 53
	MAYORIGUALQUE  reduce 53
	MENORIGUALQUE  reduce 53
	DISTINTO  reduce 53
	IGUALDAD  reduce 53
	'='  reduce 53
	X  reduce 53
	'>'  reduce 53
	'<'  reduce 53
	'+'  reduce 53
	'-'  reduce 53
	'*'  reduce 53
	'/'  reduce 53
	'%'  reduce 53
	']'  reduce 53
	')'  reduce 53
	';'  reduce 53
	','  reduce 53


state 84
	programa : definiciones VOID MAIN '(' ')' '{' declaraciones sentencias '}' .  (1)

	.  reduce 1


state 85
	sentencias : sentencias sentencia .  (15)

	.  reduce 15


state 86
	declaraciones : declaraciones declaracionVariable ';' .  (7)

	.  reduce 7


state 87
	expresion : expresion Y . expresion  (50)

	CTE_ENTERA  shift 53
	CTE_REAL  shift 54
	CTE_CARACTER  shift 55
	ID  shift 61
	'-'  shift 62
	'('  shift 63
	'!'  shift 64
	.  error

	expresion  goto 118
	invocacion  goto 74


state 88
	expresion : expresion O . expresion  (51)

	CTE_ENTERA  shift 53
	CTE_REAL  shift 54
	CTE_CARACTER  shift 55
	ID  shift 61
	'-'  shift 62
	'('  shift 63
	'!'  shift 64
	.  error

	expresion  goto 119
	invocacion  goto 74


state 89
	expresion : expresion MAYORIGUALQUE . expresion  (46)

	CTE_ENTERA  shift 53
	CTE_REAL  shift 54
	CTE_CARACTER  shift 55
	ID  shift 61
	'-'  shift 62
	'('  shift 63
	'!'  shift 64
	.  error

	expresion  goto 120
	invocacion  goto 74


state 90
	expresion : expresion MENORIGUALQUE . expresion  (47)

	CTE_ENTERA  shift 53
	CTE_REAL  shift 54
	CTE_CARACTER  shift 55
	ID  shift 61
	'-'  shift 62
	'('  shift 63
	'!'  shift 64
	.  error

	expresion  goto 121
	invocacion  goto 74


state 91
	expresion : expresion DISTINTO . expresion  (48)

	CTE_ENTERA  shift 53
	CTE_REAL  shift 54
	CTE_CARACTER  shift 55
	ID  shift 61
	'-'  shift 62
	'('  shift 63
	'!'  shift 64
	.  error

	expresion  goto 122
	invocacion  goto 74


state 92
	expresion : expresion IGUALDAD . expresion  (49)

	CTE_ENTERA  shift 53
	CTE_REAL  shift 54
	CTE_CARACTER  shift 55
	ID  shift 61
	'-'  shift 62
	'('  shift 63
	'!'  shift 64
	.  error

	expresion  goto 123
	invocacion  goto 74


state 93
	sentencia : expresion '=' . expresion ';'  (17)

	CTE_ENTERA  shift 53
	CTE_REAL  shift 54
	CTE_CARACTER  shift 55
	ID  shift 61
	'-'  shift 62
	'('  shift 63
	'!'  shift 64
	.  error

	expresion  goto 124
	invocacion  goto 74


state 94
	expresion : expresion X . expresion  (52)

	CTE_ENTERA  shift 53
	CTE_REAL  shift 54
	CTE_CARACTER  shift 55
	ID  shift 61
	'-'  shift 62
	'('  shift 63
	'!'  shift 64
	.  error

	expresion  goto 125
	invocacion  goto 74


state 95
	expresion : expresion '>' . expresion  (44)

	CTE_ENTERA  shift 53
	CTE_REAL  shift 54
	CTE_CARACTER  shift 55
	ID  shift 61
	'-'  shift 62
	'('  shift 63
	'!'  shift 64
	.  error

	expresion  goto 126
	invocacion  goto 74


state 96
	expresion : expresion '<' . expresion  (45)

	CTE_ENTERA  shift 53
	CTE_REAL  shift 54
	CTE_CARACTER  shift 55
	ID  shift 61
	'-'  shift 62
	'('  shift 63
	'!'  shift 64
	.  error

	expresion  goto 127
	invocacion  goto 74


state 97
	expresion : expresion '+' . expresion  (39)

	CTE_ENTERA  shift 53
	CTE_REAL  shift 54
	CTE_CARACTER  shift 55
	ID  shift 61
	'-'  shift 62
	'('  shift 63
	'!'  shift 64
	.  error

	expresion  goto 128
	invocacion  goto 74


state 98
	expresion : expresion '-' . expresion  (42)

	CTE_ENTERA  shift 53
	CTE_REAL  shift 54
	CTE_CARACTER  shift 55
	ID  shift 61
	'-'  shift 62
	'('  shift 63
	'!'  shift 64
	.  error

	expresion  goto 129
	invocacion  goto 74


state 99
	expresion : expresion '*' . expresion  (40)

	CTE_ENTERA  shift 53
	CTE_REAL  shift 54
	CTE_CARACTER  shift 55
	ID  shift 61
	'-'  shift 62
	'('  shift 63
	'!'  shift 64
	.  error

	expresion  goto 130
	invocacion  goto 74


state 100
	expresion : expresion '/' . expresion  (41)

	CTE_ENTERA  shift 53
	CTE_REAL  shift 54
	CTE_CARACTER  shift 55
	ID  shift 61
	'-'  shift 62
	'('  shift 63
	'!'  shift 64
	.  error

	expresion  goto 131
	invocacion  goto 74


state 101
	expresion : expresion '%' . expresion  (43)

	CTE_ENTERA  shift 53
	CTE_REAL  shift 54
	CTE_CARACTER  shift 55
	ID  shift 61
	'-'  shift 62
	'('  shift 63
	'!'  shift 64
	.  error

	expresion  goto 132
	invocacion  goto 74


state 102
	expresion : expresion '[' . expresion ']'  (59)

	CTE_ENTERA  shift 53
	CTE_REAL  shift 54
	CTE_CARACTER  shift 55
	ID  shift 61
	'-'  shift 62
	'('  shift 63
	'!'  shift 64
	.  error

	expresion  goto 133
	invocacion  goto 74


state 103
	expresion : expresion '.' . ID  (55)

	ID  shift 134
	.  error


state 104
	sentencia : invocacion ';' .  (23)

	.  reduce 23


state 105
	cuerpoDefinicion : sentencias .  (13)
	sentencias : sentencias . sentencia  (15)

	CTE_ENTERA  shift 53
	CTE_REAL  shift 54
	CTE_CARACTER  shift 55
	READ  shift 56
	WRITE  shift 57
	WHILE  shift 58
	IF  shift 59
	RETURN  shift 60
	ID  shift 61
	'-'  shift 62
	'('  shift 63
	'!'  shift 64
	'}'  reduce 13

	sentencia  goto 85
	expresion  goto 68
	invocacion  goto 69

